# TensorRT-Plugin

01_AddScalar/: AddScalarPlugin.cu  AddScalarPlugin.h  CMakeLists.txt  common.cuh  test.py
